Created menu withdraws

--- a/public_html/scss/base/_typography.scss
+++ b/public_html/scss/base/_typography.scss
@@ -27,3 +27,5 @@
     url("/fonts/MaterialFont/MaterialIcons-Regular.woff") format('woff'),
     url("/fonts/MaterialFont/MaterialIcons-Regular.ttf") format('truetype');
 }
+
+@import url('https://fonts.googleapis.com/css?family=Signika+Negative');
