--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -44,6 +44,7 @@ Contains all basic usage elements
 /* PAGES */
 @import "pages/installscreen";
 /* COMPONENTS */
-@import "pages/installshield";
+@import "components/box";
+@import "components/menu";
 /* THEMES */
 
