--- a/resources/templates/index.twig
+++ b/resources/templates/index.twig
@@ -1,5 +1,19 @@
 {% include "common/header.twig" %}
 
-
+<div class="gui-container">
+    <div class="gui-box">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae delectus, dolor doloribus exercitationem,
+            fuga, harum hic impedit inventore ipsam laborum magnam.</p>
+        <div class="menu">
+            <a class="link-as-button" href="">Opcja 1</a>
+            <a class="link-as-button" href="">Opcja 1</a>
+            <a class="link-as-button" href="">Opcja 1</a>
+            <a class="link-as-button" href="">Opcja 1</a>
+        </div>
+    </div>
+    <div class="gui-box">
+        <span class="title">archi_tektur</span>
+    </div>
+</div>
 
 {% include "common/footer.twig" %}
