--- a/public_html/css/master.css
+++ b/public_html/css/master.css
@@ -1,105 +1,141 @@
-/*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+@import url(https://fonts.googleapis.com/css?family=Signika+Negative);/*!
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
  *//*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
  *//*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
  *//*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
  */.material-icons{direction:ltr;display:inline-block;font-family:'Material Icons',sans-serif;font-size:24px;font-style:normal;font-weight:400;letter-spacing:normal;line-height:1;text-transform:none;white-space:nowrap;word-wrap:normal;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;-moz-osx-font-smoothing:grayscale;-webkit-font-feature-settings:'liga';font-feature-settings:'liga'}/*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
- */a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{border:0;font:inherit;font-size:100%;margin:0;padding:0;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}/*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+ */a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{border:0;font:inherit;font-size:100%;margin:0;padding:0;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:none}table{border-collapse:collapse;border-spacing:0}/*!
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
- */@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(../../fonts/MaterialFont/MaterialIcons-Regular.eot);src:local("Material Icons"),local("MaterialIcons-Regular"),url(../../fonts/MaterialFont/MaterialIcons-Regular.woff2) format("woff2"),url(../../fonts/MaterialFont/MaterialIcons-Regular.woff) format("woff"),url(../../fonts/MaterialFont/MaterialIcons-Regular.ttf) format("truetype")}@font-face{font-family:"Source Sans Pro";src:url(../../fonts/SourceSansPro/SourceSansPro.eot);src:url(../../fonts/SourceSansPro/SourceSansPro.eot?#iefix) format("embedded-opentype"),url(../../fonts/SourceSansPro/SourceSansPro.otf) format("opentype"),url(../../fonts/SourceSansPro/SourceSansPro.svg) format("svg"),url(../../fonts/SourceSansPro/SourceSansPro.ttf) format("truetype"),url(../../fonts/SourceSansPro/SourceSansPro.woff) format("woff"),url(../../fonts/SourceSansPro/SourceSansPro.woff2) format("woff2");font-weight:400;font-style:normal}@font-face{font-family:PTSans;src:url(../../fonts/PTSans/PTSans-Web-Bold.eot);src:url(../../fonts/PTSans/PTSans-Web-Bold.eot?#iefix) format("embedded-opentype"),url(../../fonts/PTSans/PTSans-Web-Bold.woff2) format("woff2"),url(../../fonts/PTSans/PTSans-Web-Bold.woff) format("woff"),url(../../fonts/PTSans/PTSans-Web-Bold.ttf) format("truetype"),url(../../fonts/PTSans/PTSans-Web-Bold.svg) format("svg");font-weight:400;font-style:normal}@font-face{font-family:Catamaran;src:url(../../fonts/Catamaran/Catamaran-Regular.eot);src:url(../../fonts/Catamaran/Catamaran-Regular.eot?#iefix) format("embedded-opentype"),url(../../fonts/Catamaran/Catamaran-Regular.otf) format("opentype"),url(../../fonts/Catamaran/Catamaran-Regular.svg) format("svg"),url(../../fonts/Catamaran/Catamaran-Regular.ttf) format("truetype"),url(../../fonts/Catamaran/Catamaran-Regular.woff) format("woff"),url(../../fonts/Catamaran/Catamaran-Regular.woff2) format("woff2");font-weight:400;font-style:normal}/*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+ */@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(../../fonts/MaterialFont/MaterialIcons-Regular.eot);src:local("Material Icons"),local("MaterialIcons-Regular"),url(../../fonts/MaterialFont/MaterialIcons-Regular.woff2) format("woff2"),url(../../fonts/MaterialFont/MaterialIcons-Regular.woff) format("woff"),url(../../fonts/MaterialFont/MaterialIcons-Regular.ttf) format("truetype")}/*!
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
- */*{-webkit-box-sizing:border-box;box-sizing:border-box}html{height:100%;width:100%}body{background:#f8f8f8;color:#444;font-family:Helvetica,sans-serif;height:100%;text-align:center;width:100%;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.main-info{padding:20px}.main-info h1{font-size:40px;padding-top:50px}.main-info p{padding:30px}.bottom-navigation{margin-top:calc(80vh - 200px)}.bottom-navigation .divider{color:#444;margin:15px}.bottom-navigation .bold{font-weight:bolder}/*!
- * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services. ArchFW comes with pre-installed router and JSON API functionality.
+ */*{-webkit-box-sizing:border-box;box-sizing:border-box}html{height:100%;width:100%}body{background:url(../../img/backgrounds/kozle-blurred.jpg) center center fixed;background-size:cover;color:#444;font-family:'Signika Negative',sans-serif;height:100%;text-align:center;width:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}/*!
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
  * Visit https://github.com/archi-tektur/ArchFW/ for more info.
  *
  * PHP version 7.2
  *
- * @category  Framework / Template
+ * @category  Framework/Boilerplate
  * @package   ArchFW
- * @author    Oskar Barcz <kontakt@archi-tektur.pl>
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
  * @copyright 2018 Oskar 'archi_tektur' Barcz
- * @license   MIT
- * @version   2.5.0
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
- */.main-info{padding:40px}.main-info h1{font-size:40px;margin:40px}.bottom-navigation{margin-top:calc(80vh - 200px)}.bottom-navigation .divider{color:#444;margin:30px}.code{background:#e8e8e8;border:2px #e8e8e8 solid;border-radius:3px;color:#cd5c5c;font-style:italic;padding:2px 5px;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
+ */.main-info{padding:20px}.main-info h1{font-size:40px;padding-top:50px}.main-info p{padding:30px}.bottom-navigation{margin-top:calc(80vh - 200px)}.bottom-navigation .divider{color:#444;margin:15px}.bottom-navigation .bold{font-weight:bolder}/*!
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
+ * Visit https://github.com/archi-tektur/ArchFW/ for more info.
+ *
+ * PHP version 7.2
+ *
+ * @category  Framework/Boilerplate
+ * @package   ArchFW
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
+ * @copyright 2018 Oskar 'archi_tektur' Barcz
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
+ * @link      https://github.com/archi-tektur/ArchFW/
+ */.gui-container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.gui-container .gui-box{-webkit-box-shadow:0 3px 6px rgba(0,0,0,.16),0 3px 6px rgba(0,0,0,.23);box-shadow:0 3px 6px rgba(0,0,0,.16),0 3px 6px rgba(0,0,0,.23);width:320px;min-height:50px;max-height:70vh;background:rgba(230,230,230,.8);padding:10px;margin:2px;text-align:justify}/*!
+ * ArchFramework (ArchFW in short) is universal template for server-side rendered applications and services.
+ * ArchFW comes with pre-installed router and JSON API functionality.
+ * Visit https://github.com/archi-tektur/ArchFW/ for more info.
+ *
+ * PHP version 7.2
+ *
+ * @category  Framework/Boilerplate
+ * @package   ArchFW
+ * @author    Oskar 'archi-tektur' Barcz <kontakt@archi-tektur.pl>
+ * @copyright 2018 Oskar 'archi_tektur' Barcz
+ * @license   MIT https://opensource.org/licenses/MIT
+ * @version   2.7.0
+ * @link      https://github.com/archi-tektur/ArchFW/
+ */.menu{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;margin-top:20px}.menu .link-as-button{background:#fefefe;margin:2px auto;border-bottom:3px #f89e30 solid;border-radius:2px;width:250px;text-align:center;padding:7px;text-decoration:none;color:#444;-webkit-transition:all 50ms ease-in-out;transition:all 50ms ease-in-out}.menu .link-as-button:hover{background:#f89e30;color:#fefefe}
