--- a/public_html/scss/base/_typography.scss
+++ b/public_html/scss/base/_typography.scss
@@ -28,4 +28,4 @@
     url("/fonts/MaterialFont/MaterialIcons-Regular.ttf") format('truetype');
 }
 
-@import url('https://fonts.googleapis.com/css?family=Signika+Negative');
+@import url('https://fonts.googleapis.com/css?family=Signika+Negative|PT+Sans');
