--- a/public_html/scss/components/_login-choose.scss
+++ b/public_html/scss/components/_login-choose.scss
@@ -14,17 +14,38 @@
  * @link      https://github.com/archi-tektur/ArchFW/
  */
 
-.footing {
+.login-choose {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-content: center;
-    padding: 20px;
 
-    .title {
-        color: #f89e30;
-        font-family: "PT Sans", sans-serif;
-        font-size: 26px;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
-        font-weight: bold;
+    .select {
+        color: #444444;
+        width: 120px;
+        display: block;
+        margin: 0 5px 5px 5px;
+        padding: 5px;
+        text-decoration: none;
+        text-align: center;
+        transition: 0.1s all ease-in-out;
+
+        .icon {
+            color: inherit;
+            font-size: 40px;
+            margin: 16px;
+            width: auto;
+        }
+
+        .description {
+            display: block;
+            font-size: 18px;
+            width: auto;
+
+        }
+
+        &:hover {
+            color: #f89e30;
+        }
     }
 }
+
