Developed User Bar

--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -49,5 +49,6 @@ Contains all basic usage elements
 @import "components/footing";
 @import "components/login-choose";
 @import "components/login";
+@import "components/userbox";
 /* THEMES */
 
