--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -50,5 +50,7 @@ Contains all basic usage elements
 @import "components/login-choose";
 @import "components/login";
 @import "components/userbox";
+@import "components/logobox";
+@import "components/act";
 /* THEMES */
 
