--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -52,5 +52,6 @@ Contains all basic usage elements
 @import "components/userbox";
 @import "components/logobox";
 @import "components/act";
+@import "components/link-as-button";
 /* THEMES */
 
