--- a/resources/templates/act.twig
+++ b/resources/templates/act.twig
@@ -1,7 +1,12 @@
 {% include "common/header.twig" %}
 <div class="gui-container">
     {% include "common/logobox.twig" %}
-    <section class="gui-box act">
+    <section class="gui-box">
+        <main class="act">
+            <img src="/img/acts/prolog.jpg" alt="Obraz jest okładką aktu" class="layer">
+            <span class="title">Prolog</span>
+        </main>
+        <a class="link-as-button">Zacznij prolog</a>
     </section>
     {% include "common/footing.twig" %}
 </div>
