--- a/public_html/scss/components/_act.scss
+++ b/public_html/scss/components/_act.scss
@@ -13,4 +13,28 @@
  * @version   2.7.0
  * @link      https://github.com/archi-tektur/ArchFW/
  */
+.act {
+    height: 300px;
+    margin-bottom: 20px;
 
+    .layer {
+        height: 300px;
+        width: 300px;
+        position: relative;
+        z-index: 1;
+    }
+
+    .title {
+        display: block;
+        position: relative;
+        width: 300px;
+        background: rgba(0, 0, 0, 0.5);
+        text-align: center;
+        color: #FEFEFE;
+        padding: 20px;
+        bottom: 60px;
+        z-index: 20;
+    }
+
+
+}
