Creating card manager

--- a/resources/templates/act.twig
+++ b/resources/templates/act.twig
@@ -6,8 +6,9 @@
             <img src="/img/acts/prolog.jpg" alt="Obraz jest okładką aktu" class="layer">
             <span class="title">Prolog</span>
         </main>
-        <a class="link-as-button">Zacznij prolog</a>
+        <a href="card/1" class="link-as-button">Zacznij prolog</a>
     </section>
+    {% include "common/backmenu.twig" %}
     {% include "common/footing.twig" %}
 </div>
 {% include "common/footer.twig" %}
