--- a/resources/templates/login-choose.twig
+++ b/resources/templates/login-choose.twig
@@ -14,6 +14,7 @@
             </a>
         </div>
     </div>
+    {% include "common/backmenu.twig" %}
     {% include "common/footing.twig" %}
 </div>
 {% include "common/footer.twig" %}
