--- a/resources/templates/login.twig
+++ b/resources/templates/login.twig
@@ -16,6 +16,7 @@
             <span>{{error}}</span>
         </div>
     {% endif %}
+    {% include "common/backmenu.twig" %}
     {% include "common/footing.twig" %}
 </div>
 {% include "common/footer.twig" %}
