--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -53,5 +53,6 @@ Contains all basic usage elements
 @import "components/logobox";
 @import "components/act";
 @import "components/link-as-button";
+@import "components/card";
 /* THEMES */
 
