Created almost everything

--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -41,6 +41,7 @@ Contains all basic usage elements
 'base/typography',
 'base/environment';
 /* LAYOUT */
+@import "layout/inputs";
 @import "layout/box";
 /* PAGES */
 @import "pages/installscreen";
