--- a/resources/templates/utils/uploader.twig
+++ b/resources/templates/utils/uploader.twig
@@ -8,15 +8,14 @@
             <input name="cardID" placeholder="numer karty" type="number" step="1" required>
             <textarea class="textarea" name="cardContent" placeholder="treść karty, przeciągając w prawym dolnym rogu
             możecie powiększyć te pole" required></textarea>
-            <input name="answer[]" placeholder="odpowiedź 1" type="text" required>
-            <input name="to[]" placeholder="karta do odp 1" type="number" step="1" required>
+            <input name="answer[]" placeholder="odpowiedź 1" type="text">
+            <input name="to[]" placeholder="karta do odp 1" type="number" step="1">
             <input name="answer[]" placeholder="odpowiedź 2" type="text">
-            <input name="to[]" placeholder="karta do odp 2" type="number" step="1" required>
+            <input name="to[]" placeholder="karta do odp 2" type="number" step="1">
             <input name="answer[]" placeholder="odpowiedź 3" type="text">
-            <input name="to[]" placeholder="karta do odp 3" type="number" step="1" required>
+            <input name="to[]" placeholder="karta do odp 3" type="number" step="1">
             <input name="answer[]" placeholder="odpowiedź 4" type="text">
-            <input name="to[]" placeholder="karta do odp 4" type="number" step="1" required>
-
+            <input name="to[]" placeholder="karta do odp 4" type="number" step="1">
             <input type="submit" name="submitted" value="Dodaj">
         </form>
     </div>
