--- a/resources/templates/index.twig
+++ b/resources/templates/index.twig
@@ -14,6 +14,7 @@
             <a class="link-as-button" href="{{button.link}}">{{button.title}}</a>
             <a class="link-as-button" href="/about">O grze</a>
             <a class="link-as-button" href="/authors">Autorzy</a>
+            <a class="link-as-button" href="/uploader-choose-act">Dodawanie kartek</a>
             <a class="link-as-button" href="https://github.com/archi-tektur/TownOfSalem">Kod źródłowy</a>
         </div>
     </section>
