--- a/resources/templates/utils/uploader-choose.twig
+++ b/resources/templates/utils/uploader-choose.twig
@@ -10,4 +10,5 @@
         <a href="/uploader?act=5" class="role">Epilog</a>
     </div>
     {% include "common/footing.twig" %}
+    {% include "common/footing.twig" %}
 </div>
