--- a/resources/templates/card.twig
+++ b/resources/templates/card.twig
@@ -7,7 +7,7 @@
     </section>
     <div class="gui-box-less">
         {% for link in cardDetails.linksJSON %}
-            <a href="/{{link.answerLink}}" class="role">
+            <a href="{{link.answerLink}}" class="role">
                 <span class="answer">{{link.answerText}}</span>
                 <span class="fas fa-chevron-right"></span>
             </a>
