--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -55,5 +55,6 @@ Contains all basic usage elements
 @import "components/act";
 @import "components/link-as-button";
 @import "components/card";
+@import "components/authors";
 /* THEMES */
 
