--- a/resources/templates/authors.twig
+++ b/resources/templates/authors.twig
@@ -11,7 +11,7 @@
         <span class="name-sub">Tomasz Cembała</span>
         <span class="name-sub">Kamil Maśnica</span>
         <span class="name-sub">Szymon Mrowiec</span>
-        <span class="work">Fabuła</span>
+        <span class="work">Breadcrumbs</span>
         <p>Wykonano podczas imprezy GameJam 2018 w Zespole Szkół Żeglugi Sródlądowej. Zbieżność imion i nazwisk jest
             przypadkowa.</p>
     </section>
@@ -19,6 +19,15 @@
     {% include "common/footing.twig" %}
 </div>
 <script>
+    let audio = new Audio('/music/sna.mp3');
+    let promise = audio.play();
+    if (promise !== undefined) {
+        promise.then(_ => {
+            console.log('playing!');
+        }).catch(error => {
+            console.log('Error while playing', error);
+        });
+    }
 
 
 </script>
